--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 h1 {
-    background-color: aquamarine;
+    background-color: rgb(127, 212, 255);
     color: blueviolet;
 }
 
 body {
-    background-color: aquamarine;
+    background-color: rgb(127, 212, 255);
     text-align: center;
     font-size: 16px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
