--- a/-ra-munka-main/style.css
+++ b/-ra-munka-main/style.css
@@ -1,37 +1,37 @@
-h1 {
-    background-color: rgb(127, 212, 255);
-    color: blueviolet;
+#main{
+    display: flex;
+  justify-content: space-between;
+}
+body{
+    background-color: rgb(26, 26, 60);
+    padding: 25px;
+    margin: 25px;
 }
 
-body {
-    background-color: rgb(127, 212, 255);
+p {
+    color: white;
+}
+
+h1{
+    color: rgb(244, 219, 187);
     text-align: center;
-    font-size: 16px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.tabla{
+    background-color: rgb(240, 210, 171);
+    border: 3px solid black;
+    border-radius: 20px;
+}
+div{
+    padding-left: 125px;
+    padding-right: 110px;
+    padding-bottom: 5px;
 }
 
-div {
-    background-color: bisque;
-    padding: 10px;
-    margin: 10px;
-    border: solid 3px blue;
-    border-radius: 10px;
-    box-shadow: 1px 1px 3px  black;
+a {
+    color: red;
+    text-decoration: underline brown;
 }
 
-#Ősz {
-    background-color: black;
+h2 {
+    color: darkred;
 }
-
-#Tél {
-    background-color: black;
-}
-
-#Tavasz {
-    background-color: black;
-}
-
-#Nyár {
-    background-color: black;
-}
-
