--- a/2024.10.03/style.css
+++ b/2024.10.03/style.css
@@ -1,10 +1,10 @@
 canvas {
-    border:1px solid #d3d3d3;
+    border:4px solid #d3d3d3;
     background-color: #f1f1f1;
 }
 
 div {
-    text-align:center;
-    width:480px;
-
+    text-align: center;
+    width: 480px;
+    margin: 20px auto;
 }
